--- a/_cleaned_tex-sourcefiles/MY451_2.tex
+++ b/_cleaned_tex-sourcefiles/MY451_2.tex
@@ -2214,8 +2214,8 @@ created.
 in Chapter \ref{c_descr1} (R=\texttt{region}, D=\texttt{democracy}).}
 \label{t_countrydata}
 %
-{\footnotesize
-\begin{ttfamily}
+
+\begin{table}
 \begin{tabular}{|lrrr|lrrr|lrrr|}\hline
 Country & R & D & GDP &
 Country & R & D & GDP &
@@ -2274,6 +2274,4 @@ Russia        & 3 &  7 & 8.9 &Serbia        & 3 &  7 & 2.2&             & &  &  
 Brazil        & 4 &  8 & 7.6 &Guinea        & 1 &  1 & 2.1&& &  &     \\
 \hline
 \end{tabular}
-\end{ttfamily}
-}
 \end{table}
